Enable AST verifier
Description:
 * Enable AST verifier after parser if there are any syntax error
 * Set "each" default value for AST verifier

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBTMEX

Signed-off-by: Sergey Chernykh <chernykh.sergey1@huawei.com>

--- a/ets2panda/util/options.yaml
+++ b/ets2panda/util/options.yaml
@@ -268,7 +268,7 @@ options:
     delimiter: ':'
   - name: phases
     type: arg_list_t
-    default: [ "after" ]
+    default: [ "each" ]
     description: >
       Specify phases to finalize with ASTVerifier. Shortcuts: "before", "each", "after".
     delimiter: ':'
