Implement ambient interface declarations
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBU2K8

Description:
  To implement the three characteristics of ambient interface declarations, which include:
   1: Ambient Indexer
      declare interface C {
        [index: number]: number
      }
   2: Ambient Call Signature
      declare interface C {
        (someArg: number): boolean
      }
   3: Ambient Iterable
      declare class C {
        [Symbol.iterator]: CIterator
      }
     Restriction: returnType must be a type that implements Iterator interface defined in the standard library
Test:
 all test passed

Signed-off-by:menjiaheng <menjiaheng@h-partners.com>

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -162,6 +162,8 @@ defines:
     ref: STD_ANNOTATIONS_RETENTION
   - name: Retention
     ref: BUILTIN_RETENTION
+  - name: 'Symbol'
+    ref: SYMBOL
 
 packages:
   - name: 'std.core'
