Fix default export bug
Issue:     https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBU2V1?from=project-issue
Signed-off-by: daizihan <daizihan@huawei.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -987,3 +987,7 @@ syntax:
 - name: UNHANDLED_THROW_IN_INITIALIZER
   id: 244
   message: "Unhandled throw statement."
+
+- name: EXPORT_DEFAULT_NO_REEXPORT
+  id: 245
+  message: "Cannot use 'export default' in re-export context"
