--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -140,6 +140,8 @@ defines:
     ref: READONLY_TYPE_NAME
   - name: 'Partial'
     ref: PARTIAL_TYPE_NAME
+  - name: 'FixedArray'
+    ref: FIXED_ARRAY_TYPE_NAME
   - name: 'Required'
     ref: REQUIRED_TYPE_NAME
   - name: '<property>'
