spreadExpression support resizable array Array<>
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBUPMC

Description:
spread expression support ...Array<>

Tested-by:
ninja tests (passed)
ets_testrunner (passed)

Signed-off-by: tengtengh <tenghao9@huawei.com>

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -144,6 +144,8 @@ defines:
     ref: FIXED_ARRAY_TYPE_NAME
   - name: 'Required'
     ref: REQUIRED_TYPE_NAME
+  - name: 'Array'
+    ref: ARRAY
   - name: '<property>'
     ref: PROPERTY
   - name: 'never'
