[ETS] Forbid native methods in local classes
Issue:https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBUFEA
Signed-off-by: Daniel Kofanov <kofanov.daniil@huawei-partners.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1118,3 +1118,7 @@ semantic:
 - name: FIXED_ARRAY_PARAM_ERROR
   id: 277
   message: "FixedArray<T> must have only one type parameter."
+
+- name: LOCAL_CLASS_NATIVE_METHOD
+  id: 278
+  message: "Local class '{}' shouldn't have native methods/constructors"
