--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -29,6 +29,7 @@ set(ES2PANDA_LSP_SRC
   ./src/services/services.cpp
   ./src/services/utilities.cpp
   ./src/line_column_offset.cpp
+  ./src/inlay_hints.cpp
 )
 
 panda_add_library(${LSP_LIB} SHARED ${ES2PANDA_LSP_SRC})
