--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -76,6 +76,10 @@ ets2panda_add_gtest(lsp_api_test_auto_completion CPP_SOURCES
     get_auto_completion_test.cpp
 )
 
+ets2panda_add_gtest(lsp_api_test_inlay_hints CPP_SOURCES
+    inlay_hints_test.cpp
+)
+
 ets2panda_add_gtest(lsp_api_test_find_rename_locations CPP_SOURCES
     find_rename_locations_test.cpp
 )
